# App1/App1.MobileAppService.Client/swagger.json
@@ -325,9 +325,7 @@
             "bearer": []
           }
         ]
-      }
-    },
-    "/api/User/UpdateUser": {
+      },
       "put": {
         "tags": [
           "User"
